--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Científica - Alpha Code</title>
-    <script src="dest/script.js" type="text/javascript"></script>
+    <script src="typescript/script.js" type="text/javascript"></script>
 
     <style>
         *{
