--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Científica - Alpha Code</title>
     <script src="typescript/script.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="index.css"  />
 
     <style>
         *{
             text-align: center;
+            color: aliceblue;
             font-family: Arial, Helvetica, sans-serif;
+            background-color: rgb(0, 0, 0);
         }
     </style>
 
@@ -20,11 +23,11 @@
     <br>
     <p>Selecione a operação que deseja realizar:</p>
     <br>
-    <a id="0" href="" onclick="op1(this.id)">Operações Básicas</a><br><br>
-    <a id="1" href="" onclick="op2(this.id)">Cálculo Fatorial</a><br><br>
-    <a id="2" href="" onclick="op3(this.id)">Equação de Segundo Grau</a><br><br>
-    <a id="3" href="" onclick="op4(this.id)">Operação de Conversão de Base Numérica</a><br><br>
-    <a id="4" href="" onclick="op5(this.id)">Concatenação de Duas Strings</a><br><br>
-    <a id="5" href="" onclick="op6(this.id)" value="oi">Cálculo de Juros Simples e Composto</a><br><br>
+    <a id="0" href="" onclick="op1(this.id)"><button type="submit">Funções Básicas</button></a><br><br></button>
+    <a id="1" href="" onclick="op2(this.id)"><button type="submit">Cálculo Fatorial</button></a><br><br></button>
+    <a id="2" href="" onclick="op3(this.id)"><button type="submit">Equação de Segundo Grau</button></a><br><br></button>
+    <a id="3" href="" onclick="op4(this.id)"><button type="submit">Operação de Conversão de Base Numérica</button></a><br><br></button>
+    <a id="4" href="" onclick="op5(this.id)"><button type="submit">Concatenação de Duas Strings</button></a><br><br></button>
+    <a id="5" href="" onclick="op6(this.id)" value="oi"><button type="submit">Juros Simples e  Juros Composto</button></a><br><br></button>
 </body>
 </html>
